--- a/frontend/around-web/src/index.css
+++ b/frontend/around-web/src/index.css
@@ -1,5 +1,9 @@
 @import "~antd/dist/antd.css";
 @import "./styles/TopBar.css";
+@import "./styles/App.css";
+@import "./styles/Main.css";
+@import "./styles/Login.css";
+@import "./styles/Home.css";
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
