--- a/frontend/around-web/src/index.css
+++ b/frontend/around-web/src/index.css
@@ -5,6 +5,7 @@
 @import "./styles/Login.css";
 @import "./styles/Home.css";
 @import "./styles/Register.css";
+@import "./styles/SearchBar.css";
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
